2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/Warning.py:
	* pychecker/options.py:
	* pychecker/pcmodules.py:
	* pychecker/utils.py:
	* pychecker/warn.py:
	  Clean up a bunch of pychecker warnings.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/Config.py:
	* pychecker/OP.py:
	* pychecker/OptionTypes.py:
	* pychecker/Stack.py:
	* pychecker/Warning.py:
	* pychecker/checker.py:
	* pychecker/function.py:
	* pychecker/msgs.py:
	* pychecker/options.py:
	* pychecker/pcmodules.py:
	* pychecker/printer.py:
	* pychecker/python.py:
	* pychecker/utils.py:
	* pychecker/warn.py:
	  Add Python mode lines.  Remove shebang lines where not needed.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Extract PyCheckerModule, Variable and Class...
	* pychecker/pcmodules.py:
	  ... and move it here.
	  This allows us importing a module that has PyCheckerModule without
	  all sorts of side effects.
	* pychecker/CodeChecks.py:
	* pychecker/utils.py:
	  Follow up on changes.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/utils.py:
	  Make utils.debug output something slightly nicer.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/warn.py:
	  Make sure that every disassembly has a header saying what it
	  is (module/class/class method/function)

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Add docstrings.
	  Fix some inconsistent casing.
	  More PEP-8 adherence.
	* pychecker/checker.py:
	  All of the above, plus add PyCheckerModule.getToken() which
	  can be used later to handle token conflicts.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Make output of NOT PROCESSED UNABLE TO IMPORT report filename
	  similarly to other warnings.
	* test_expected/test58-2.3:
	* test_expected/test77: